Fix: Overflow at mobile menu

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -8,7 +8,7 @@ body {
     }
 
     &.offcanvas-menu-active {
-        overflow: visible;
+        overflow: hidden;
 
         #page {
             transform: translateX(100vw);
