--- a/sass/components/navigation/_main-navigation.scss
+++ b/sass/components/navigation/_main-navigation.scss
@@ -6,9 +6,11 @@
         padding: 0;
         margin: 0;
         list-style: none;
+        width: 100%;
 
         @media screen and (min-width: 768px) {
             padding: 0;
+            width: auto;
         }
     }
 
